# templates_python

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  environment.config  pyproject.toml
src/: main.py
