[tool.poetry]
name = "project_name"
version = "0.1.0"
description = ""
authors = ["Ilya Tarasov <griefbotlife@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12.7"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
mypy = "^1.13.0"
ruff = "^0.7.1"
pytest-asyncio = "^0.24.0"

[tool.pytest.ini_options]
asyncio_mode = "auto"
python_files = ["test_*.py", "*_test.py", "*_tests.py", "*_suite.py"]
python_classes = ["Test*", "*Test*", "*Test", "*Tests", "*Suite", "TestSuite*"]
python_functions = ["test_*"]
addopts = "-p no:cacheprovider"

[tool.mypy]
check_untyped_defs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
no_implicit_optional = true
ignore_missing_imports = false
warn_return_any = true
warn_unused_ignores = true
show_error_codes = true
plugins = []
exclude = []

[tool.ruff]
line-length = 120
indent-width = 4
target-version = "py312"
exclude = []

[tool.ruff.format]
quote-style = "double"
indent-style = "tab"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = false

[tool.ruff.lint]
select = [
    "BLE",
    "C90",
    "E",
    "F",
    "G",
    "I",
    "ICN",
    "ISC",
    "PLE",
    "Q",
    "RUF006",
    "RUF100",
    "T10",
    "T20",
    "TID",
    "UP",
    "W",
]
ignore = []

[tool.ruff.lint.isort]
lines-after-imports = 2
known-first-party = ["src", "tests"]

[tool.ruff.lint.per-file-ignores]
"**/tests/**/*.py" = [
    "S101", # allow asserts
    "ARG", # ignore unused function args, for fixtures
    "FBT", # allow booleans as positional arguments in tests, for pytest.mark.parametrize()
    "PLR2004", # allow magic values in comparison
]
